2006-09-01  John W. Eaton  <jwe@octave.org>

	* dirfns.cc: Don't handle nargout == 0 as a special case.
	(octave_change_to_directory): Perform tilde expansion on directory
	name here.

2006-08-30  John W. Eaton  <jwe@octave.org>

	* load-save.cc (get_file_format): Fix misplaced #endif.

2006-08-29  John W. Eaton  <jwe@octave.org>

	* load-path.cc (execute_pkg_add_or_del):
	Source PKG_ADD or PKG_DEL in base workspace.
	* parse.y (source_file): New optional arg, context.
	* parse.h (source_file): Fix decl.

2006-08-25  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 2.9.8+.

2006-08-24  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 2.9.8.
	(OCTAVE_API_VERSION): Now api-v21.
	(OCTAVE_RELEASE_DATE): Now 2006-08-24.

2006-08-23  John W. Eaton  <jwe@octave.org>

	* ov.h (octave_value::save_ascii): Delete strip_nan_and_inf arg.
	* ov-base.h, ov-base.cc (octave_base_value::save_ascii): Likewise.
	* ov-base-int.h, ov-base-int.cc	(octave_base_int_matrix<T>::save_ascii,
	octave_base_int_scalar<T>::save_ascii, ): Likewise.
	* ov-base-sparse.cc, ov-base-sparse.h
	(octave_base_sparse<T>::save_ascii): Likewise.
	* ov-bool-mat.cc, ov-bool-mat.h (octave_bool_matrix::save_ascii):
	Likewise.
	* ov-bool.cc, ov-bool.h (octave_bool::save_ascii): Likewise.
	* ov-cell.cc, ov-cell.h (octave_cell::save_ascii): Likewise.
	* ov-complex.cc, ov-complex.h (octave_complex::save_ascii): Likewise.
	* ov-fcn-handle.cc, ov-fcn-handle.h (octave_fcn_handle::save_ascii):
	Likewise.
	* ov-fcn-inline.cc, ov-fcn-inline.h (octave_fcn_inline::save_ascii):
	Likewise.
	* ov-list.cc, ov-list.h (octave_list::save_ascii): Likewise.
	* ov-range.cc, ov-range.h (octave_range::save_ascii): Likewise.
	* ov-scalar.cc, ov-scalar.h (octave_scalar::save_ascii): Likewise.
	* ov-str-mat.cc, ov-str-mat.h (octave_char_matrix_str::save_ascii):
	Likewise.
	* ov-struct.cc, ov-struct.h (octave_struct::save_ascii): Likewise.